--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Demo123/nbproject/private/
 /JavaApplication5/nbproject/private/
 /QuanLyCuaHangGiaySportPower/nbproject/private/
+/DuAn1/nbproject/private/
