--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /JavaApplication5/nbproject/private/
 /QuanLyCuaHangGiaySportPower/nbproject/private/
 /HoaDonDuAN/nbproject/private/
+/DuAn1_2/nbproject/private/
