--- a/Test/nbproject/project.properties
+++ b/Test/nbproject/project.properties
@@ -28,16 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DuAn1.jar
+dist.jar=${dist.dir}/Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/DuAn1
+dist.jlink.output=${dist.jlink.dir}/Test
 excludes=
-file.reference.sqljdbc4-4.0.jar=../../../sqljdbc4-4.0.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.sqljdbc4-4.0.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=DuAn1
-main.class=duan1.DuAn1
+jlink.launcher.name=Test
+main.class=test.Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
