--- a/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
+++ b/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\15\\build.properties
+file.reference.sqljdbc4-4.0.jar=G:\\Semester 3\\Block2\\JDBC Drivers\\sqljdbc_8.4.1.0_enu\\sqljdbc_8.4
+user.properties.file=C:\\Users\\trxua\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
