--- a/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
+++ b/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\dinhq\\AppData\\Roaming\\NetBeans\\13\\build.properties
