--- a/QuanLyCuaHangGiaySportPower/nbproject/project.properties
+++ b/QuanLyCuaHangGiaySportPower/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyCuaHangGiaySportPower
 excludes=
+file.reference.mssql-jdbc-9.2.1.jre11.jar=C:\\Users\\dinhq\\M\u00e1y t\u00ednh\\mssql-jdbc-9.2.1.jre11.jar
 file.reference.sqljdbc4-4.0.jar=C:\\Users\\admin\\Documents\\sqljdbc4-4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4-4.0.jar}
+    ${file.reference.sqljdbc4-4.0.jar}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
