--- a/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
+++ b/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.sqljdbc4-4.0.jar=G:\\Semester 3\\Block2\\JDBC Drivers\\sqljdbc_8.4.1.0_enu\\sqljdbc_8.4
+file.reference.sqljdbc4-4.0.jar=C:\\Users\\phams\\Downloads\\mssql-jdbc-7.2.2.jre8.jar
 user.properties.file=C:\\Users\\trxua\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
