--- a/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
+++ b/QuanLyCuaHangGiaySportPower/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.sqljdbc4-4.0.jar=C:\\Users\\phams\\Downloads\\mssql-jdbc-7.2.2.jre8.jar
-user.properties.file=C:\\Users\\trxua\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\phams\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
